policies/gatekeeper/constraints/block-privileged-containers.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPrivilegedContainer
metadata:
  name: block-privileged-containers
  labels:
    app.kubernetes.io/name: cloudnative-threatguard
    app.kubernetes.io/component: admission-control
    security.threatguard.io/tier: prevention
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - tetragon
      - kube-public
      - kube-node-lease
  parameters:
    exemptContainers: []
